code analysis qui corrige automatiquement certaines lignes de code